--- a/.github/workflows/cse_daily.yml
+++ b/.github/workflows/cse_daily.yml
@@ -1,40 +1,43 @@
-name: CSE Daily Report Download
+name: CSE Daily Report Downloader with Selenium
 
-# When to run
 on:
   schedule:
-    # Runs daily at 2 AM UTC (adjust time as needed)
-    - cron: '0 2 * * *'
-  # Also allow manual triggering
-  workflow_dispatch:
+    # Run daily at 8 AM UTC
+    - cron: '0 8 * * *'
+  workflow_dispatch: # Allow manual triggering
 
 jobs:
-  download:
+  download-report:
     runs-on: ubuntu-latest
     
     steps:
-    # Checkout code
     - name: Checkout repository
       uses: actions/checkout@v4
       
-    # Setup Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
         
-    # Install dependencies
-    - name: Install Python packages
+    - name: Install Chrome
+      uses: browser-actions/setup-chrome@v1
+      with:
+        chrome-version: stable
+        
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4
+        pip install selenium requests beautifulsoup4 webdriver-manager
         
-    # Run the script
-    - name: Download CSE Daily Report
+    - name: Install ChromeDriver
+      run: |
+        # Install ChromeDriver using webdriver-manager
+        python -c "from webdriver_manager.chrome import ChromeDriverManager; ChromeDriverManager().install()"
+        
+    - name: Run CSE Downloader
       run: python cse_downloader.py
       
-    # Upload downloaded files as artifacts (UPDATED VERSION)
-    - name: Upload PDF files
+    - name: Upload downloaded files
       uses: actions/upload-artifact@v4
       if: always()
       with:
@@ -42,11 +45,10 @@ jobs:
         path: downloads/
         retention-days: 30
         
-    # Commit and push files back to repo (optional)
-    - name: Commit files
+    - name: Commit downloaded files
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add downloads/ || true
-        git commit -m "Add downloaded report $(date)" || exit 0
+        git commit -m "Add CSE daily report $(date)" || exit 0
         git push || true
