--- a/.github/workflows/cse_daily.yml
+++ b/.github/workflows/cse_daily.yml
@@ -1,43 +1,54 @@
-name: CSE Daily Report Downloader
+name: CSE Daily Report Downloader with Selenium
 
 on:
   schedule:
-    - cron: '30 14 * * *' # Runs every day at 8:00 PM Sri Lankan time (14:30 UTC)
-  workflow_dispatch:
+    # Run daily at 8 AM UTC
+    - cron: '0 8 * * *'
+  workflow_dispatch: # Allow manual triggering
 
 jobs:
-  download:
+  download-report:
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
-
+      uses: actions/checkout@v4
+      
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
-
+        python-version: '3.11'
+        
+    - name: Install Chrome
+      uses: browser-actions/setup-chrome@v1
+      with:
+        chrome-version: stable
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install selenium requests beautifulsoup4 webdriver-manager
         
     - name: Install ChromeDriver
       run: |
-        sudo apt-get update
-        sudo apt-get install -y wget unzip
-        CHROME_DRIVER_VERSION=$(wget -q -O - https://chromedriver.storage.googleapis.com/LATEST_RELEASE)
-        wget -q -O chromedriver.zip "https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip"
-        unzip chromedriver.zip
-        sudo mv chromedriver /usr/local/bin/
+        # Install ChromeDriver using webdriver-manager
+        python -c "from webdriver_manager.chrome import ChromeDriverManager; ChromeDriverManager().install()"
         
-    - name: Run script
-      run: python cse_daily_downloader.py
-
-    - name: Commit and push if there are changes
+    - name: Run CSE Downloader
+      run: python cse_downloader.py
+      
+    - name: Upload downloaded files
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: cse-daily-reports-${{ github.run_number }}
+        path: downloads/
+        retention-days: 30
+        
+    - name: Commit downloaded files
       run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add downloads/
-        git diff --staged --quiet || (git commit -m "Add latest CSE daily report" && git push)
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add downloads/ || true
+        git commit -m "Add CSE daily report $(date)" || exit 0
+        git push || true
